src/rds/snapshots/test_build__rds__rds_reader__tests__bcreader_02.snap
---
source: src/rds/rds_reader.rs
expression: res
---
Sexp {
    kind: Closure(
        Closure {
            formals: [],
            body: Sexp {
                kind: Bc(
                    Bc {
                        instructions: [
                            12,
                            17,
                            1,
                        ],
                        constpool: [
                            Sexp {
                                kind: Nil,
                                metadata: MetaData {
                                    attr: None,
                                },
                            },
                            Sexp {
                                kind: Int(
                                    [
                                        -2147483648,
                                        0,
                                        0,
                                    ],
                                ),
                                metadata: MetaData {
                                    attr: Some(
                                        Sexp {
                                            kind: List(
                                                [
                                                    TaggedSexp {
                                                        tag: Some(
                                                            "class",
                                                        ),
                                                        data: Sexp {
                                                            kind: Str(
                                                                [
                                                                    "expressionsIndex",
                                                                ],
                                                            ),
                                                            metadata: MetaData {
                                                                attr: None,
                                                            },
                                                        },
                                                    },
                                                ],
                                            ),
                                            metadata: MetaData {
                                                attr: None,
                                            },
                                        },
                                    ),
                                },
                            },
                        ],
                    },
                ),
                metadata: MetaData {
                    attr: None,
                },
            },
            environment: Global,
        },
    ),
    metadata: MetaData {
        attr: None,
    },
}
