src/rds/snapshots/test_build__rds__rds_reader__tests__intsxp.snap
---
source: src/rds/rds_reader.rs
expression: res
---
Sexp {
    kind: Int(
        [
            1,
            2,
        ],
    ),
    metadata: MetaData {
        attr: None,
    },
}
