src/rds/snapshots/test_build__rds__rds_reader__tests__langsxp_01.snap
---
source: src/rds/rds_reader.rs
expression: res
---
Sexp {
    kind: Lang(
        Lang {
            target: Sym(
                Sym {
                    data: "f",
                },
            ),
            args: [
                TaggedSexp {
                    tag: None,
                    data: Sexp {
                        kind: Sym(
                            Sym {
                                data: "x",
                            },
                        ),
                        metadata: MetaData {
                            attr: None,
                        },
                    },
                },
            ],
        },
    ),
    metadata: MetaData {
        attr: None,
    },
}
