src/rds/snapshots/test_build__rds__rds_reader__tests__langsxp_03.snap
---
source: src/rds/rds_reader.rs
expression: res
---
Sexp {
    kind: Lang(
        Lang {
            target: Lang(
                Lang {
                    target: Sym(
                        Sym {
                            data: "hello",
                        },
                    ),
                    args: [
                        TaggedSexp {
                            tag: None,
                            data: Sexp {
                                kind: Real(
                                    [
                                        1.0,
                                    ],
                                ),
                                metadata: MetaData {
                                    attr: None,
                                },
                            },
                        },
                    ],
                },
            ),
            args: [
                TaggedSexp {
                    tag: None,
                    data: Sexp {
                        kind: Real(
                            [
                                2.0,
                            ],
                        ),
                        metadata: MetaData {
                            attr: None,
                        },
                    },
                },
            ],
        },
    ),
    metadata: MetaData {
        attr: None,
    },
}
